--- a/MySpireOffice2.csproj
+++ b/MySpireOffice2.csproj
@@ -65,10 +65,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GuQuanZhengGongZuoBiao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GuQuanZhengGongZuoBiao.Designer.cs">
+      <DependentUpon>GuQuanZhengGongZuoBiao.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GuQuanZhengGongZuoBiao.resx">
+      <DependentUpon>GuQuanZhengGongZuoBiao.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
